--- a/locales/fr/instanciate.json
+++ b/locales/fr/instanciate.json
@@ -1,8 +1,8 @@
 {
-  "instanciate_app": "Instancier \"{{appName}}\"",
+  "instanciate_app": "Instancier le schéma \"{{appName}}\"",
   "instanciate": "Instancier",
   "configuration": "Paramétrage",
   "network": "Réseau",
-  "vars_config_explanation": "Voici la liste des variables de configuration disponibles dans votre application. Vous pouvez modifier ici leur valeur afin de personnaliser le comportement de votre nouvelle instance.",
+  "vars_config_explanation": "Voici la liste des variables de configuration disponibles dans votre application. Vous pouvez modifier ici leurs valeurs afin de personnaliser le comportement de votre nouvelle instance.",
   "ports_mapping_explanation": "Vous pouvez configurer ici le plan d'adressage entre les ports de votre application et votre machine hôte."
 }
