Ajout message information si pas d'application

--- a/locales/fr/apps-view.json
+++ b/locales/fr/apps-view.json
@@ -1,3 +1,4 @@
 {
-  "refresh": "Rafraîchir"
+  "refresh": "Rafraîchir",
+  "no_apps_explanation": "Aucune application trouvée. Ouvrez le catalogue pour instancier votre première application."
 }
