Ajout d'un label lors de la création d'une instance

--- a/locales/fr/instanciate.json
+++ b/locales/fr/instanciate.json
@@ -1,4 +1,6 @@
 {
+  "instance_label": "Nom de l'instance",
+  "instance_label_placeholder": "Mon application #1",
   "instanciate_app": "Instancier le schéma \"{{appName}}\"",
   "instanciate": "Instancier",
   "configuration": "Paramétrage",
