--- a/locales/fr/errors.json
+++ b/locales/fr/errors.json
@@ -1,3 +1,4 @@
 {
-  "InstanceAlreadyExistsError": "L'identifiant d'instance {{instanceId}} est déjà utilisé !"
+  "InstanceAlreadyExistsError": "L'identifiant d'instance {{instanceId}} est déjà utilisé !",
+  "UnknownError": "Erreur inconnue. Veuillez contacter votre administrateur."
 }
