Première version graph CPU

--- a/locales/fr/app-card.json
+++ b/locales/fr/app-card.json
@@ -7,5 +7,5 @@
   "stop": "Arrêter",
   "delete": "Supprimer",
   "administration": "Administration",
-  "app_status": "Supervision"
+  "app_supervision": "Supervision"
 }
