--- a/locales/fr/memory-graph.json
+++ b/locales/fr/memory-graph.json
@@ -1,5 +1,5 @@
 {
-  "memory_use": "Mémoire vive utilisée",
+  "memory_use": "Utilisation mémoire vive",
   "percent_usage": "Ratio d'utilisation",
   "bytes_usage": "Mémoire utilisée"
 }
